# ohiro-wallet-live

./: .env.example  .gitignore  Cargo.toml  ENTREGA_DIO.md  LICENSE  README.md
docs/: ANALISE.md
migrations/: README.md
src/: app.rs  auth.rs  errors.rs  main.rs  models.rs  store.rs  utils.rs  views.rs
src/routes/: api.rs  mod.rs  web.rs
templates/: assets.html  login.html  register.html
