[package]
name = "ohiro-wallet-live"
version = "0.1.3"
edition = "2021"
description = "Carteira de investimentos SSR em Rust com Axum, Askama e sessão JWT HS256 em memória."
license = "MIT"

[dependencies]
askama = { version = "0.15.4", features = ["derive"] }
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
hmac = "0.12.1"
password-auth = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
